src/inspect/detail/snapshots/_oxitest__inspect__detail__snapshot_tests__detail_conftest.snap
---
source: src/inspect/detail/mod.rs
expression: "render_to_string(&app, 120, 24)"
---
" ○ overview › C tests/conftest.py                                                                                       "
"┌────────────────────────────────────────────────────────────────┐┌ Preview ───────────────────────────────────────────┐"
"│C tests/conftest.py                                             ││F db                                                │"
"│                                                                ││                                                    │"
"│  fixtures_count: 1                                             ││  scope: session                                    │"
"│  helpers_count: 1                                              ││  source: tests/conftest.py                         │"
"│                                                                ││                                                    │"
"│  Fixtures                                                      ││                                                    │"
"│    F db                                                        ││                                                    │"
"│                                                                ││                                                    │"
"│  Helpers                                                       ││                                                    │"
"│    H make_db                                                   ││                                                    │"
"│                                                                ││                                                    │"
"│  Related                                                       ││                                                    │"
"│›   F  db                                                       ││                                                    │"
"│    H  make_db                                                  ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"└────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────┘"
" q Quit  / Search  ? Help  j/k Navigate  l Enter  h Back  H History                                                     "
