src/inspect/detail/snapshots/_oxitest__inspect__detail__snapshot_tests__detail_declaration.snap
---
source: src/inspect/detail/mod.rs
expression: "render_to_string(&app, 120, 24)"
---
" ○ overview › D tests/conftest.py                                                                                       "
"┌────────────────────────────────────────────────────────────────┐┌ Preview ───────────────────────────────────────────┐"
"│C tests/conftest.py                                             ││F db                                                │"
"│                                                                ││                                                    │"
"│  fixtures_count: 1                                             ││  scope: session                                    │"
"│                                                                ││  source: tests/conftest.py                         │"
"│  Fixtures                                                      ││                                                    │"
"│    F db                                                        ││                                                    │"
"│                                                                ││                                                    │"
"│  Related                                                       ││                                                    │"
"│›   F  db                                                       ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"└────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────┘"
" q Quit  / Search  ? Help  j/k Navigate  l Enter  h Back  H History                                                     "
