src/inspect/detail/snapshots/_oxitest__inspect__detail__snapshot_tests__detail_fixture.snap
---
source: src/inspect/detail/mod.rs
expression: "render_to_string(&app, 120, 24)"
---
" ○ overview › F db_session                                                                                              "
"┌────────────────────────────────────────────────────────────────┐┌ Preview ───────────────────────────────────────────┐"
"│F db_session                                                    ││T tests/test_db.py::test_create_user                │"
"│                                                                ││                                                    │"
"│  scope: session                                                ││  async: no                                         │"
"│  binding: fixture                                              ││                                                    │"
"│  autouse: no                                                   ││  Fixtures (1)                                      │"
"│  async: no                                                     ││    F db_session                                    │"
"│  source: tests/conftest.py                                     ││                                                    │"
"│  description: Database session fixture                         ││                                                    │"
"│                                                                ││                                                    │"
"│  Consumers                                                     ││                                                    │"
"│    T tests/test_db.py::test_create_user                        ││                                                    │"
"│                                                                ││                                                    │"
"│  Defined In                                                    ││                                                    │"
"│    C tests/conftest.py                                         ││                                                    │"
"│                                                                ││                                                    │"
"│  Related                                                       ││                                                    │"
"│›   T  tests/test_db.py::test_create_user                       ││                                                    │"
"│    C  tests/conftest.py                                        ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"└────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────┘"
" q Quit  / Search  ? Help  j/k Navigate  l Enter  h Back  H History  s Source  e Edit                                   "
