src/inspect/detail/snapshots/_oxitest__inspect__detail__snapshot_tests__detail_helper.snap
---
source: src/inspect/detail/mod.rs
expression: "render_to_string(&app, 120, 24)"
---
" ○ overview › H make_db                                                                                                 "
"┌────────────────────────────────────────────────────────────────┐┌ Preview ───────────────────────────────────────────┐"
"│H make_db                                                       ││C tests/conftest.py                                 │"
"│                                                                ││                                                    │"
"│  signature: make_db(name: str)                                 ││                                                    │"
"│  source: tests/conftest.py                                     ││  Helpers (1)                                       │"
"│  docstring: Create a test database.                            ││    H make_db                                       │"
"│                                                                ││                                                    │"
"│  Defined In                                                    ││                                                    │"
"│    C tests/conftest.py                                         ││                                                    │"
"│                                                                ││                                                    │"
"│  Related                                                       ││                                                    │"
"│›   C  tests/conftest.py                                        ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"└────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────┘"
" q Quit  / Search  ? Help  j/k Navigate  l Enter  h Back  H History  s Source  e Edit                                   "
