src/inspect/detail/snapshots/_oxitest__inspect__detail__snapshot_tests__detail_mark.snap
---
source: src/inspect/detail/mod.rs
expression: "render_to_string(&app, 120, 24)"
---
" ○ overview › M slow                                                                                                    "
"┌────────────────────────────────────────────────────────────────┐┌ Preview ───────────────────────────────────────────┐"
"│M slow                                                          ││T tests/test_a.py::test_one                         │"
"│                                                                ││                                                    │"
"│  used_by_count: 2                                              ││  async: no                                         │"
"│                                                                ││                                                    │"
"│  Used By                                                       ││  Marks (1)                                         │"
"│    T tests/test_a.py::test_one                                 ││    M slow                                          │"
"│    T tests/test_b.py::test_two                                 ││                                                    │"
"│                                                                ││                                                    │"
"│  Related                                                       ││                                                    │"
"│›   T  tests/test_a.py::test_one                                ││                                                    │"
"│    T  tests/test_b.py::test_two                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"└────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────┘"
" q Quit  / Search  ? Help  j/k Navigate  l Enter  h Back  H History                                                     "
