src/inspect/detail/snapshots/_oxitest__inspect__detail__snapshot_tests__detail_test.snap
---
source: src/inspect/detail/mod.rs
expression: "render_to_string(&app, 120, 24)"
---
" ○ overview › T tests/test_db.py::test_create_user                                                                      "
"┌────────────────────────────────────────────────────────────────┐┌ Preview ───────────────────────────────────────────┐"
"│T tests/test_db.py::test_create_user                            ││F db_session                                        │"
"│                                                                ││                                                    │"
"│  async: yes                                                    ││  scope: function                                   │"
"│                                                                ││  source:                                           │"
"│  Fixture Dependencies                                          ││                                                    │"
"│    F db_session                                                ││                                                    │"
"│                                                                ││                                                    │"
"│  Marks                                                         ││                                                    │"
"│    M slow                                                      ││                                                    │"
"│                                                                ││                                                    │"
"│  Related                                                       ││                                                    │"
"│›   F  db_session                                               ││                                                    │"
"│    M  slow                                                     ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"└────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────┘"
" q Quit  / Search  ? Help  j/k Navigate  l Enter  h Back  H History  s Source  e Edit                                   "
